@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.01.07">
+		<package name="R7.University" type="Library" version="01.01.08">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -68,7 +68,7 @@
 						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.01.07</version>
+							<version>01.01.08</version>
 						</script>
 					</scripts>
 				</component>
@@ -212,7 +212,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.01.07">
+		<package name="R7.University.Employee" type="Module" version="01.01.08">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -316,7 +316,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDetails" type="Module" version="01.01.07">
+		<package name="R7.University.EmployeeDetails" type="Module" version="01.01.08">
 			<friendlyName>_EmployeeDetails</friendlyName>
 			<description>This is a module to display detailed information about single employee.</description>
 			<owner>
@@ -400,7 +400,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.01.07">
+		<package name="R7.University.EmployeeList" type="Module" version="01.01.08">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -493,7 +493,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.01.07">
+		<package name="R7.University.Division" type="Module" version="01.01.08">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -586,7 +586,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.07">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.08">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -679,7 +679,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.DivisionDirectory" type="Module" version="01.01.07">
+		<package name="R7.University.DivisionDirectory" type="Module" version="01.01.08">
 			<friendlyName>R7.University.DivisionDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
