@@ -1,4 +1,12 @@
-﻿<h3>Version 1.1.7</h3>
+﻿<h3>Version 1.1.8</h3>
+<ul>
+    <li>Implemented #63: Added EmployeeDetails module.</li>
+    <li>EmployeeDetails: Optimize & fix table painting script.<li>
+    <li>Localization updated.<li>
+    <li>Other small improvements and fixes.</li>
+</ul>
+
+<h3>Version 1.1.7</h3>
 <ul>
     <li>Fixed #65: DivisionDirectory shows unpublished head employees.</li>
     <li>Implemented / fixed #64: Employee: Cross-portal Tab URLs.</li>
